service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  ports:
    - protocol: TCP          
      port: 80
      targetPort: 3000   
  selector:
    app: frontend
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 4000   
  selector:
    app: backend
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    role: db
spec:
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
  selector:
    role: db
