ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pern-app-ingress
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-south-1:accountid:certificate/CERTIFICATE_ID
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: demo.ksiddhiapphub.org
    http:
      paths:
      - path: /           
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api        
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
  tls:
  - hosts:
    - demo.ksiddhiapphub.org
    secretName: app
